# Marix

./: .gitattributes  .gitignore  Cargo.toml  README.cn.md  README.md  config.toml  deployment.json  resolved_config.toml  temp.json  temp_parse.js  temp_parse_results.json  temp_preview.txt  temp_schema.json  temp_update.js
src/: .design.json  .design.md  .workflow.mmd  Cargo.toml  config.toml  lib.rs  mod.rs
src/agent/: .design.json  .design.md  .workflow.mmd  Cargo.toml  lib.rs  loop.rs  main.rs  mod.rs  overview.rs  runtime.rs  types.rs
src/agent/engine/: .design.json  .workflow.mmd  error.rs  loop_engine.rs  mod.rs  plan.rs  session_context.rs  task_context.rs
src/agent/execution/: .design.json  execution.rs  hub.rs  mod.rs
src/agent/frontdoor/: .design.json  .workflow.mmd  mod.rs  session.rs  task.rs
src/agent/model/: .design.json  .workflow.mmd  backend.rs  backend_deepseek.rs  error.rs  mod.rs
src/agent/plan/: .design.json  draft.rs  error.rs  hub.rs  mod.rs  plan.rs  queue.rs  record.rs  stringify.rs
src/agent/prompt/: .design.json  execution_analysis.rs  initial.rs  mod.rs  prompt.rs
src/agent/session/: .design.json  .workflow.mmd  mod.rs  session.rs  session_context.rs  session_state.rs
src/agent/step/: .design.json  step.rs
src/agent/task/: .design.json  .workflow.mmd  execution.rs  mod.rs  state.rs  step.rs  task.rs  task_context.rs  task_execution.rs  task_state.rs  task_step.rs
src/cli/: .design.json  Cargo.toml  config.json  input.rs  interface.rs  main.rs  mod.rs  output.rs  pipe_client.rs
src/client/: .design.json  .workflow.mmd  Cargo.toml  event.rs  lib.rs  main.rs  session.rs
src/client/app/: .design.json
src/client/cli/: .design.json  .workflow.mmd  command.rs  main.rs  mod.rs
src/client/core/: .design.json  .workflow.mmd  mod.rs  session.rs  task.rs
src/client/executor/: .design.json  .workflow.mmd  error.rs  executor.rs  mod.rs
src/client/tool/: .design.json  .workflow.mmd  category.rs  descriptor.rs  error.rs  mcp.rs  mod.rs  registry.rs  tool.rs
src/common/: .design.json  .workflow.mmd  Cargo.toml  lib.rs  message.rs  mod.rs  protocol.rs
src/common/actor/: actor.rs  lifecycle.rs  mod.rs  runtime.rs
src/common/channel/: .design.json  .workflow.mmd  error.rs  mod.rs  session.rs  task.rs
src/common/config/: .design.json  .workflow.mmd  config.rs  mod.rs  sys.rs
src/common/logging/: .design.json  .workflow.mmd  entry.rs  error.rs  level.rs  logger.rs  logger_tests.rs  message.rs  mod.rs  query.rs  session.rs  source.rs  store.rs  tag.rs
src/common/logging_tool/: mod.rs  tool_logger.rs
src/common/message/: .design.json  .workflow.mmd  chat.rs  chat_message.rs  message.rs  mod.rs  utility.rs
src/common/protocol/: .design.json  .workflow.mmd  chat_message.rs  execution.rs  message.rs  mod.rs  session.rs  step.rs  task.rs  tool.rs  user_input.rs  user_output.rs  utility.rs
src/common/session/: .design.json  mod.rs  pipe.rs  pipe_client.rs  pipe_error.rs  pipe_response.rs  pipe_server.rs  session_config.rs  session_pipe.rs
src/common/structure/: .design.json  .workflow.mmd  channel.rs  dynamic_response.rs  mod.rs  work_queue.rs
src/common/tool/: .design.json  .workflow.mmd  mod.rs  schema.rs  tool.rs
src/config/: .design.json  .design.md  Cargo.toml  lib.rs  mod.rs
src/core/: .design.json  Cargo.toml  config.json  core.rs  core_pipe_server.rs  io.rs  lib.rs  main.rs  mod.rs  model.rs  model_backend.rs  model_backend_deepseek.rs  pipe_server.rs  run_log.rs  runtime.rs  transport.rs
src/core/model_backend/: .design.json  deepseek.rs  mod.rs
src/core/preprocess/: .design.json  mod.rs  output.rs  preprocessor.rs
src/host/: .design.json  .workflow.mmd  Cargo.toml  executor.rs  lib.rs  main.rs  session.rs
src/host/execution/: execution.rs  mod.rs  runtime.rs  state.rs
src/host/executor/: .design.json  .workflow.mmd  cache.rs  executor.rs  mod.rs  registry.rs  runtime.rs  state.rs  tool.rs
src/host/tool/: .design.json  .workflow.mmd  Cargo.toml  lib.rs  tool.rs  tool_main.rs
src/overview/: .design.json  .design.md  design.rs  mod.rs  source_map.rs  star_map.rs
src/prompt/: .design.json
src/prompt/step/: .design.json  Analysis.prompt  Composition.prompt  ExecutionAnalysis.prompt  Initial.prompt  Plan.prompt
src/protocol/: .design.json  Cargo.toml  actor.rs  context.rs  lib.rs  message.rs  mod.rs  signature.rs
src/protocol/execution/: .design.json  error.rs  event.rs  id.rs  mod.rs  request.rs  result.rs  signature.rs  status.rs
src/protocol/executor/: event.rs  mod.rs
src/protocol/intent/: context.rs  draft.rs  error.rs  event.rs  id.rs  mod.rs  result.rs  signature.rs  status.rs
src/protocol/invocation/: error.rs  event.rs  id.rs  mod.rs  request.rs  result.rs  signature.rs  status.rs
src/protocol/plan/: .design.json  answer.rs  context.rs  draft.rs  error.rs  event.rs  id.rs  mod.rs  plan.rs  result.rs  signature.rs  status.rs
src/protocol/relay/: error.rs  event.rs  id.rs  kind.rs  mod.rs  request.rs  result.rs  signature.rs  status.rs
src/protocol/session/: .design.json  event.rs  mod.rs
src/protocol/step/: .design.json  draft.rs  error.rs  event.rs  id.rs  kind.rs  mod.rs  plan.rs  preview.rs  result.rs  signature.rs  status.rs
src/protocol/task/: .design.json  error.rs  event.rs  mod.rs  preview.rs  request.rs  result.rs  signature.rs  status.rs
src/protocol/tool/: .design.json  category.rs  mod.rs  preview.rs  schema.rs
src/protocol/workflow/: call_summary.rs  complete.rs  continuation.rs  infeasible.rs  mod.rs  plan.rs  tool.rs
src/server/: Cargo.toml  lib.rs  main.rs
src/server/.invocation/: mod.rs  state.rs
src/server/.plan/: helper.rs  mod.rs  state.rs
src/server/.step/: state.rs  step.rs
src/server/.task/: mod.rs  task.rs
src/server/intent/: intent.rs  mod.rs  (+4 more)
src/server_telemetry/: Cargo.toml  handlers.rs  main.rs  router.rs  server.rs
src/structure/: .design.json
src/tests/: session_connection.rs  task_connection.rs
src/tool/: .design.json  .workflow.mmd  Cargo.toml  lib.rs  tool_main.rs  tool_program.rs
src2/core/: .design.json  Cargo.toml
(+510 files in other folders)
