[workspace]
members = [
  "common",
  "config",
  "core",
  "cli"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
marix-common = { path = "common" }
marix-config = { path = "config" }
