[package]
name = "marix"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
path = "mod.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
remoc = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync", "time"] }
toml = "0.9"
