[package]
name = "marix-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
marix-common = { path = "../common" }
remoc = "0.18"
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }

[lib]
name = "marix_agent"
path = "lib.rs"

[[bin]]
name = "marix-agent"
path = "main.rs"
