[package]
name = "marix-client"
version = "0.1.0"
edition = "2024"

[dependencies]
marix-agent = { path = "../agent" }
marix-common = { path = "../common" }
marix-protocol = { path = "../protocol" }
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync", "time"] }

[lib]
name = "marix_client"
path = "lib.rs"

[[bin]]
name = "marix-client"
path = "main.rs"
