[package]
name = "marix-client"
version = "0.1.0"
edition = "2024"

[dependencies]
marix-server = { path = "../server" }
marix-common = { path = "../common" }
marix-protocol = { path = "../protocol" }
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync", "time"] }

[lib]
name = "marix_client"
path = "lib.rs"

[[bin]]
name = "marix-client-cli"
path = "cli/main.rs"

[[bin]]
name = "marix-client-app"
path = "app/main.rs"
