[package]
name = "marix-common"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "webp"] }
redb = "4"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
remoc = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync", "time"] }
toml = "0.9"
uuid = { version = "1", features = ["serde", "v4"] }

[lib]
name = "marix_common"
path = "lib.rs"
