[package]
name = "marix-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Marix agent core library and server binary."

[lib]
name = "marix_core"
path = "lib.rs"

[[bin]]
name = "marix-core"
path = "main.rs"

[dependencies]
marix-common.workspace = true
marix-config.workspace = true
serde_json.workspace = true
