[package]
name = "marix-host"
version = "0.1.0"
edition = "2024"

[dependencies]
marix-agent = { path = "../agent" }
marix-common = { path = "../common" }
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync", "time"] }

[lib]
name = "marix_host"
path = "lib.rs"

[[bin]]
name = "marix-host"
path = "main.rs"
