[package]
name = "marix-server"
version = "0.1.0"
edition = "2024"

[dependencies]
marix-common = { path = "../common" }
marix-protocol = { path = "../protocol" }
remoc = "0.18"
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }

[lib]
name = "marix_server"
path = "lib.rs"

[[bin]]
name = "marix-server"
path = "main.rs"
