[package]
name = "marix-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
marix-common = { path = "../common" }
marix-protocol = { path = "../protocol" }

[lib]
name = "marix_tool"
path = "lib.rs"

[features]
read_file = []
write_file = []
list_directory = []
search_text = []
powershell = []
command_prompt = []
bash = []
os_env = []
web_fetch = []
web_search = []
get_code_outline = []
replace_in_file = []
start_process = []
read_process_output = []
stop_process = []

[[bin]]
name = "marix_tool_read_file"
path = "tool_main.rs"
required-features = ["read_file"]

[[bin]]
name = "marix_tool_write_file"
path = "tool_main.rs"
required-features = ["write_file"]

[[bin]]
name = "marix_tool_list_directory"
path = "tool_main.rs"
required-features = ["list_directory"]

[[bin]]
name = "marix_tool_search_text"
path = "tool_main.rs"
required-features = ["search_text"]

[[bin]]
name = "marix_powershell"
path = "tool_main.rs"
required-features = ["powershell"]

[[bin]]
name = "marix_command_prompt"
path = "tool_main.rs"
required-features = ["command_prompt"]

[[bin]]
name = "marix_bash"
path = "tool_main.rs"
required-features = ["bash"]

[[bin]]
name = "marix_tool_os_env"
path = "tool_main.rs"
required-features = ["os_env"]

[[bin]]
name = "marix_tool_web_fetch"
path = "tool_main.rs"
required-features = ["web_fetch"]

[[bin]]
name = "marix_tool_web_search"
path = "tool_main.rs"
required-features = ["web_search"]

[[bin]]
name = "marix_tool_get_code_outline"
path = "tool_main.rs"
required-features = ["get_code_outline"]

[[bin]]
name = "marix_tool_replace_in_file"
path = "tool_main.rs"
required-features = ["replace_in_file"]

[[bin]]
name = "marix_tool_start_process"
path = "tool_main.rs"
required-features = ["start_process"]

[[bin]]
name = "marix_tool_read_process_output"
path = "tool_main.rs"
required-features = ["read_process_output"]

[[bin]]
name = "marix_tool_stop_process"
path = "tool_main.rs"
required-features = ["stop_process"]
