[package]
name = "marix-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Marix core pipe server binary."

[[bin]]
name = "marix-core"
path = "main.rs"

[dependencies]
marix-common.workspace = true
marix-config.workspace = true
reqwest.workspace = true
serde_json.workspace = true
